--- a/action.yml
+++ b/action.yml
@@ -1,18 +1,18 @@
 name: "Podcast Generator"
-author: "Kaitlyn Nugent"
+author: "Ray Villalobos"
 description: "Generates a feed for a podcast from a YAML file"
 runs:
   using: "docker"
   image: "Dockerfile"
 branding:
   icon: "git-branch"
-  color: "green"
+  color: "red"
 inputs:
   email:
-    description: "The committer's email address"
+    description: The commiter's email address
     required: true
     default: ${{ github.actor }}@localhost
   name:
-    description: "The committer's name"
+    description: The committer's name
     required: true
     default: ${{ github.actor }}
